--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,7 @@
 @import './Layouts/header';
 @import './Layouts/intro';
 @import './Layouts/services';
+@import './Layouts/topCategories';
 
 
 //Page
