--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,7 @@
 @import './Layouts/intro';
 @import './Layouts/services';
 @import './Layouts/topCategories';
+@import './Layouts/partners';
 @import './Layouts/footer';
 
 
