--- a/css/main.css
+++ b/css/main.css
@@ -273,15 +273,8 @@ html, body {
 }
 
 @media screen and (max-width: 992px) {
-  .banner__item {
-    position: relative;
-  }
-  .banner__item .getStarted {
-    position: absolute;
-    padding-top: 360px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  .banner .banner__content .banner__item i {
+    visibility: hidden;
   }
 }
 
