--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 
 //Layout
 @import './Layouts/header';
+@import './Layouts/udeCarousel';
 @import './Layouts/intro';
 @import './Layouts/services';
 @import './Layouts/banner';
