--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 
 //Base
 @import './Base/reset';
+@import './Base/customize';
 
 //Component
 @import './Components/button';
@@ -17,6 +18,7 @@
 @import './Layouts/header';
 @import './Layouts/udeCarousel';
 @import './Layouts/intro';
+@import './Layouts/courses';
 @import './Layouts/services';
 @import './Layouts/banner';
 @import './Layouts/topCategories';
