--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,7 @@
 @import './Layouts/intro';
 @import './Layouts/courses';
 @import './Layouts/services';
+@import './Layouts/student';
 @import './Layouts/banner';
 @import './Layouts/topCategories';
 @import './Layouts/partners';
