--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,6 +23,7 @@
 @import './Layouts/student';
 @import './Layouts/banner';
 @import './Layouts/topCategories';
+@import './Layouts/feedback';
 @import './Layouts/partners';
 @import './Layouts/footer';
 
