--- a/sass/Layouts/_intro.scss
+++ b/sass/Layouts/_intro.scss
@@ -1,12 +1,15 @@
 .intro{
     background: linear-gradient(to right, $color-purple, $color-red-0);
     .intro__content{
-        margin: 0px $mg-2;
+        width: 95%;
+        margin: 0px auto;
         .intro__item{
             padding-right: $pd-2 + 5;
             padding-top: $pd-2;
             padding-bottom: $pd-2;
             line-height: 1.2;
+            justify-content: center;
+            text-align: center;
             .icon{
                 @include styleText($color-white-0, $fs-5 - 3, $fw-normal);
                 margin-right: $mg-1 + 6;
