--- a/sass/Layouts/_services.scss
+++ b/sass/Layouts/_services.scss
@@ -7,8 +7,12 @@
         border: 1px solid #e8e9eb;
         background: $color-white-0;
         height: 100%;
+        min-height: 165px;
         .service__icon{
             margin-right: $mg-1 + 6;
+            img{
+                width: 42px;
+            }
         }
         .service__content{
             padding-top: $pd-0;
@@ -19,6 +23,21 @@
             p:last-child{
                 @include styleText($color-gray-4, $fs-0 + 1, $fw-normal);
                 margin-bottom: 0px;
+            }
+        }
+    }
+}
+
+
+// responsive
+@include responsive("large"){
+    .services{
+        .services__item{
+            min-height: 235px;
+            text-align: center;
+            .service__icon{
+                display: flex;                
+                justify-content: center;
             }
         }
     }
